styles.css
* General Reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Inter', sans-serif;
    background-color: #000000;
    color: #ffffff;
    scroll-behavior: smooth;
}

h1, h2, .logo {
    font-family: 'Playfair Display', serif;

}
.nav-links :hover{
    background-color: #d4af37;
    padding: 10px;
    }

.container {
    max-width: 800px;
    margin: 0 auto;
    padding: 0 20px;
}

/* Nav */
nav {
    display: flex;
    justify-content: space-between;
    padding: 20px;
    background: #0e0d0d;
    border-bottom: 1px solid #222;
    text-align: center;
}

.logo { color: #d4af37; font-size: 1.5rem; letter-spacing: 2px; }
.nav-links { display: flex; list-style: none; }
.nav-links li { margin-left: 20px; }
.nav-links a { color: #fff; text-decoration: none; font-size: 0.8rem; text-transform: uppercase; }

/* Hero */
.hero {
    height: 60vh;
    display: flex;
    align-items: center;
    justify-content: center;
    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('assets/images/hero.jpg') center/cover;
}

.gold { color: #d4af37; }

/* Intro Section */
.intro { padding: 5rem 0; text-align: center; background: #151515; }
.intro h2 { color: #d4af37; margin-bottom: 1.5rem; }
.intro p { font-size: 1.1rem; line-height: 1.8; opacity: 0.9; }

/* Gallery */
.gallery-container {
    padding: 40px 5%;
    text-align: center;
}

.gallery-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 20px;
}

.photo-card {
    overflow: hidden;
    border-radius: 8px;
}

.photo-card img {
    width: 100%;
    height: 300px;
    object-fit: cover;
    transition: 0.5s;
}

.photo-card:hover img {
    transform: scale(1.1);
}
/* Contact Form */
.contact-section { padding: 5rem 0; background: #0f0f0f; }
.contact-section h2 { text-align: center; color: #d4af37; margin-bottom: 1rem; }
.contact-section p { text-align: center; margin-bottom: 3rem; opacity: 0.7; }

#contact-form {
    display: flex;
    flex-direction: column;
    gap: 20px;
}
.form-group { display: flex; flex-direction: column; gap: 8px; }

label { font-size: 0.9rem; color: #d4af37; text-transform: uppercase; }

input, textarea {
    padding: 12px;
    background: #1a1a1a;
    border: 1px solid #333;
    color: #fff;
    font-family: inherit;
}

input:focus, textarea:focus {
    outline: none;
    border-color: #d4af37;
}

.btn {
    background: #d4af37;
    color: #000;
    padding: 15px 30px;
    border: none;
    cursor: pointer;
    font-weight: bold;
    text-transform: uppercase;
    transition: 0.3s;
    text-align: center;
    text-decoration: none;
}

.btn:hover { background: #fff; }

footer { padding: 3rem; text-align: center; font-size: 0.8rem; opacity: 0.5; }

/* responsive design */
 @media screen {max-width:768px;}
    
 

